# Mobilicustos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements-test.txt
api/: Dockerfile  __init__.py  config.py  database.py  main.py  requirements.txt
api/data/: __init__.py
api/models/: __init__.py  database.py  schemas.py
api/routers/: api_endpoints.py  app_stores.py  apps.py  attack_paths.py  burp.py  bypass.py  compliance.py  corellium.py  dashboard.py  devices.py  drozer.py  exports.py  finding_workflow.py  findings.py  frida.py  fuzzing.py  health.py  ios.py  issue_tracker.py  ml_models.py  network_traffic.py  objection.py  reports.py  runtime_monitor.py  scans.py  scheduled_scans.py  screenshot.py  secrets.py  settings.py  siem.py  teams.py  webhooks.py
api/services/: app_parser.py  app_store_service.py  attack_path_analyzer.py  burp_service.py  bypass_orchestrator.py  corellium_service.py  dashboard_service.py  device_manager.py  docker_executor.py  drozer_service.py  finding_workflow_service.py  framework_detector.py  frida_service.py  fuzzing_service.py  ios_toolchain.py  (+14 more)
docs/: API.md  ARCHITECTURE.md  FRIDA_SCRIPTS.md  INSTALL.md  TOOLS.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
mobilicustos-mcp/: README.md  package.json
report-processor/: Dockerfile  requirements.txt
scripts/: cleanup.sh  deduplicate_findings.py  seed_test_findings.sql  start-and-seed.sh  take-screenshots.js
(+167 files in other folders)
